<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="303dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="0dp"
        android:text="@string/Server_and_port" />

    <CheckBox
        android:id="@+id/checkBox_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBox_keepalert"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="13dp"
        android:focusable="true"
        android:text="@string/EnableConnection"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/checkBox_ShowFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="303dp"
        android:layout_marginTop="179dp"
        android:checked="true"
        android:text="@string/showface" />

    <CheckBox
        android:id="@+id/checkBox_DontMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="404dp"
        android:layout_marginTop="179dp"
        android:text="@string/dontmove" />

    <CheckBox
        android:id="@+id/checkBox_DontRotate"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="510dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="1213dp"
        android:text="@string/dontrorate" />

    <EditText
        android:id="@+id/editText_Port"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText_Server"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="542dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="11dp"
        android:layout_toEndOf="@+id/editText_Server"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:text="@string/server_port_number" />

    <EditText
        android:id="@+id/editText_Server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-649dp"
        android:layout_marginLeft="304dp"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:text="@string/server_url" />

    <CheckBox
        android:id="@+id/checkBox_keepalert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Server"
        android:layout_alignStart="@+id/editText_Server"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-4dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="63dp"
        android:checked="true"
        android:text="@string/Keep_Alert" />

    <tw.edu.cgu.ai.zenbo.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="114dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="517dp"
        android:layout_marginTop="338dp"
        tools:visibility="invisible" />

    <tw.edu.cgu.ai.zenbo.InputView
        android:id="@+id/inputview"
        android:layout_width="640dp"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp" />

    <tw.edu.cgu.ai.zenbo.KeyPointView
        android:id="@+id/keypoint"
        android:layout_width="640dp"
        android:layout_height="480dp"
        android:layout_alignTop="@+id/inputview"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="640dp" />

    <tw.edu.cgu.ai.zenbo.MessageView
        android:id="@+id/MessageView_Detection"
        android:layout_width="628dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="1289dp"
        android:singleLine="false" />

    <tw.edu.cgu.ai.zenbo.MessageView
        android:id="@+id/MessageView_Timestamp"
        android:layout_width="626dp"
        android:layout_height="403dp"
        android:layout_below="@+id/MessageView_Detection"
        android:layout_alignStart="@+id/MessageView_Detection"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:singleLine="false" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="27dp"
        android:text="@string/close" />


</RelativeLayout>
